# rust_issue_64872_repro

./: Cargo.toml  README.md  prepare_sysroot_src.sh
sysroot_src/src/compiler_builtins/: Cargo.toml  Cargo.toml.orig
sysroot_src/src/compiler_builtins/src/: lib.rs
sysroot_src/src/getopts/: Cargo.toml
sysroot_src/src/getopts/src/: lib.rs
sysroot_src/src/liballoc/: Cargo.toml
sysroot_src/src/libcore/: Cargo.toml  alloc.rs  any.rs  array.rs  ascii.rs  bool.rs  borrow.rs  cell.rs  clone.rs  cmp.rs  convert.rs  default.rs  ffi.rs  hint.rs  internal_macros.rs  intrinsics.rs  lib.rs  macros.rs  marker.rs  option.rs  panic.rs  panicking.rs  raw.rs  result.rs  time.rs  tuple.rs  unit.rs
sysroot_src/src/libcore/char/: convert.rs  decode.rs  methods.rs  mod.rs
sysroot_src/src/libcore/fmt/: builders.rs  float.rs  mod.rs  num.rs
sysroot_src/src/libcore/fmt/rt/: v1.rs
sysroot_src/src/libcore/hash/: mod.rs  sip.rs
sysroot_src/src/libcore/iter/: mod.rs  range.rs  sources.rs
sysroot_src/src/libcore/iter/adapters/: chain.rs  flatten.rs  mod.rs
sysroot_src/src/libcore/iter/traits/: accum.rs  collect.rs  double_ended.rs  iterator.rs
sysroot_src/src/libcore/mem/: manually_drop.rs  maybe_uninit.rs  mod.rs
sysroot_src/src/libcore/num/: bignum.rs  diy_float.rs  mod.rs  wrapping.rs
sysroot_src/src/libcore/num/dec2flt/: algorithm.rs  mod.rs  num.rs  parse.rs  rawfp.rs
sysroot_src/src/libcore/num/flt2dec/: mod.rs
sysroot_src/src/libcore/ops/: arith.rs  bit.rs  function.rs  mod.rs  range.rs  unsize.rs
sysroot_src/src/libcore/prelude/: v1.rs
sysroot_src/src/libcore/ptr/: mod.rs  non_null.rs  unique.rs
sysroot_src/src/libcore/slice/: memchr.rs  mod.rs  rotate.rs  sort.rs
sysroot_src/src/libcore/str/: lossy.rs  mod.rs  pattern.rs
sysroot_src/src/libcore/sync/: atomic.rs
sysroot_src/src/libcore/unicode/: tables.rs  version.rs
sysroot_src/src/libstd/: Cargo.toml  lib.rs  panicking.rs
sysroot_src/src/libtest/: Cargo.toml  lib.rs
