[package]
authors = ["The Rust Project Developers"]
name = "core"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2018"

[lib]
name = "core"
path = "lib.rs"

# [features]
# # Make panics and failed asserts immediately abort without formatting any message
# panic_immediate_abort = []
