[package]
authors = ["The Rust Project Developers"]
name = "std2"
version = "0.0.0"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust.git"
description = "The Rust Standard Library"
edition = "2018"

[lib]
name = "std"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
core = { path = "../libcore" }
compiler_builtins = { path = "../compiler_builtins" }
