[package]
authors = ["The Rust Project Developers"]
name = "test"
version = "0.0.0"
edition = "2018"

[lib]
name = "test"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
# getopts = { version = "0.2.21", features = ['rustc-dep-of-std'] }
getopts = { path = "../getopts" }
std = { path = "../libstd" }
panic_unwind = { path = "../libpanic_unwind" }
